--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         <main class="main">
             <header class="header">
                 <div class="header-left">
-                    <h1>Kanzler Parking (SQL)</h1>
+                    <h1>Living Hotel Kanzler Parking Map</h1>
                     <button id="pdfBtn" class="pdf-btn"><span>🖨️</span> PDF Report</button>
                 </div>
                 <div class="legend">
