--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 }
 
                 // Column I (Rightmost top area)
-                reg("53_SHUTTER", ix, sY - CELL_H, CELL_W, CELL_H, 'blocked', "53 シャッター");
+                reg("53_SHUTTER", ix, sY - CELL_H, CELL_W, CELL_H, 'blocked', "53 SHUTTER");
                 [54, 55, 56, 57].forEach((n, i) => reg(String(n), ix, sY + i * CELL_H, CELL_W, CELL_H));
                 const gridY = sY + 4 * CELL_H;
                 [[58, 59], [60, 61], [62, 63], [64, 65], [66, 67], [68, 69], [70, 71], [72, 73], [74, 75], [76, 77], [78, 79], [80, "81 Res."], ["82 Bld.", "83 Res."]]
